# mtm

./: README.md  pyproject.toml
mtm/: __init__.py  __main__.py  binary_detection.py  cli.py  database.py  entitlements.py  gui.py  logging_utils.py  models.py  scanner.py
